# network

./: CMakeLists.txt  README.md
.github/workflows/: coverage.yml  linux.yml  macos.yml  windows.yml
lib/: CMakeLists.txt
lib/include/network/: types.h
lib/include/network/interface/: iclient.h
lib/include/network/structs/: endpoint.h
lib/include/wormhole/network/: types.h
lib/include/wormhole/network/interface/: iclient.h  iserver.h
lib/include/wormhole/network/structs/: endpoint.h
lib/src/structs/: endpoint.cc
